--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <style>p
-    {color: white;
-    font-family: Arial;
+    <head>
+        <title>This is decent</title>
+        <link rel="icon" href="file:///C:\Users\Elev\Desktop\Website\icon.ico">
+    </head>
 
-    }</style>
+
+
+
     <body style="background-color: black;">
-        <center>
-            <img src="https://cdn.discordapp.com/avatars/310122545573658624/90e8af385996911921fee80643e9a240.png?size=4096">
-        <p style="font-size: 20px;">I don't see why you would get me nitro if it is a waste</p>
-        <p>The last thing i want is fame and people thinking they have to do something in return</p><br>
-        <p>I know.. I know.. This isn't what you expected im sure..<br> But i feel like youve gone through enough.. Why do this to give a random guy nitro..?</p>
-        
-        </center>
+        <h1 style="color: lawngreen;">Amazing</h1>
+        <img src="https://cdn.discordapp.com/avatars/809200919811063830/82188167429d9c48b2c4f77a327bd811.webp?size=256"><br>
+        <img src="https://cdn.discordapp.com/avatars/363104050545164290/a_3d347ddf7c267177b971f13191f848bf.gif?size=256"><br>
+        <input placeholder="Username"><br>
+        <input type="password" placeholder="Password"><br><br>&ensp;&ensp;&ensp;&ensp; 
+        <button>
+            <strong>Sign up</strong>
+        </button>
     </body>
 </html>
