--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
         <button>
             <strong>Sign up</strong>
         </button>
+    
+    <a href="/Suddomains/2nd page.html">2nd page</a>
     </body>
 </html>
