--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
             <strong>Sign up</strong>
         </button>
     
-    <a href="/Suddomains/2nd page.html">2nd page</a>
+    <a href="/Suddomains/new-page.html">2nd page</a>
     </body>
 </html>
