--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>This is decent</title>
-        <link rel="icon" href="file:///C:\Users\Elev\Desktop\Website\icon.ico">
+        <link rel="icon" href="/icon.ico">
     </head>
 
 
