--- a/Suddomains/new-page.html
+++ b/Suddomains/new-page.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <a href="/index.html">Back</a>
-
-
-
-
-
+    <head>
+        <title>This is decent</title>
+        <link rel="icon" href="/icon.ico">
+    </head>
 
 
 
