--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
 
 
 
-
-    <body style="background-color: black;">
-        <h1 style="color: lawngreen;">Amazing</h1>
-        <img src="https://cdn.discordapp.com/avatars/809200919811063830/82188167429d9c48b2c4f77a327bd811.webp?size=256"><br>
-        <img src="https://cdn.discordapp.com/avatars/363104050545164290/a_3d347ddf7c267177b971f13191f848bf.gif?size=256"><br>
-        <input placeholder="Username"><br>
-        <input type="password" placeholder="Password"><br><br>&ensp;&ensp;&ensp;&ensp; 
-        <button>
-            <strong>Sign up</strong>
-        </button>
-    
-    <a href="/Suddomains/new-page.html">2nd page</a>
-    <img src="https://media.discordapp.net/attachments/790590942876532736/837283896739102750/unknown.png?width=646&height=584">
-    </body>
+    <center>
+        <body style="background-color: black;">
+            <h1>My projects</h1>
+            <ul>
+                <li>
+                    <a href="Suddomains/testing.html">My testing</a>
+                </li>
+                <li>
+                    <a href="Suddomains/new-page.html">Dont know what im going to do with it yet but we will see</a>
+                </li>
+            </ul>
+        </body
+    </center>>
 </html>
