--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
         <link rel="icon" href="/icon.ico">
     </head>
 
+<style>
+h1 {
+    color: white;
 
+}
+
+
+</style>
 
     <center>
         <body style="background-color: black;">
             <h1>My projects</h1>
-            <ul>
-                <li>
-                    <a href="Suddomains/testing.html">My testing</a>
-                </li>
-                <li>
-                    <a href="Suddomains/new-page.html">Dont know what im going to do with it yet but we will see</a>
-                </li>
-            </ul>
+            
+             <li>
+                 <a href="Suddomains/testing.html">My testing</a>
+             </li>
+             <li>
+                <a href="Suddomains/new-page.html">Dont know what im going to do with it yet but we will see</a>
+            </li>
+        
         </body
     </center>>
 </html>
