--- a/Suddomains/testing.html
+++ b/Suddomains/testing.html
@@ -9,6 +9,7 @@
 
 
     <body style="background-color: black;">
+        <a href="/index.html">back</a>
         <h1 style="color: lawngreen;">Amazing</h1>
         <img src="https://cdn.discordapp.com/avatars/809200919811063830/82188167429d9c48b2c4f77a327bd811.webp?size=256"><br>
         <img src="https://cdn.discordapp.com/avatars/363104050545164290/a_3d347ddf7c267177b971f13191f848bf.gif?size=256"><br>
