--- a/Suddomains/testing.html
+++ b/Suddomains/testing.html
@@ -3,6 +3,13 @@
     <head>
         <title>This is decent</title>
         <link rel="icon" href="/icon.ico">
+        
+        <!
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://jorgen10.github.io">
+        <meta property="og:title" content="Main Hub">
+        <meta property="og:description" content="I am a 17 year old student named Jorgen_10 who likes programming. That is exactly why i made this website. This is where im going to be posting everytihng i have learnt about HTML, CSS and JavaScript!">
+        <meta property="og:image" content="Essential-images\Profile Picture 4k.png">
     </head>
 
     <style>
