--- a/Suddomains/testing.html
+++ b/Suddomains/testing.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <html prefix="og: https://ogp.me/ns#"></html>
     <head>
         <title>This is decent</title>
         <link rel="icon" href="/icon.ico">
@@ -9,7 +10,7 @@
         <meta property="og:url" content="https://jorgen10.github.io">
         <meta property="og:title" content="Main Hub">
         <meta property="og:description" content="I am a 17 year old student named Jorgen_10 who likes programming. That is exactly why i made this website. This is where im going to be posting everytihng i have learnt about HTML, CSS and JavaScript!">
-        <meta property="og:image" content="Essential-images\Profile Picture 4k.png">
+        <meta property="og:image" content="https://jorgen10.github.io/Essential-images/Profile%20Picture%204k.png">
     </head>
 
     <style>
