--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <html prefix="og: https://ogp.me/ns#">
         <title>This is decent</title>
         <link rel="icon" href="/icon.ico">
+        
+        
+        <meta property="og:title" content='This is decent'>
+        <meta property="og:site_name" content="Jorgen_10's website">
+        <meta property="og:url" content="https://jorgen10.github.io">
+        <meta property="og:description" content='My name is Jorgen_10. I am a 17 year old student who likes programming. This is why i made this website. Whenever i learn more about HTML, CSS or JavaScript then im going to post it here'>
+        <meta property="og:image" content="https://jorgen10.github.io/Essential-images/Profile%20Picture%204k.png">
+        <meta property="og:image:secure_url" content="https://jorgen10.github.io/Essential-images/Profile%20Picture%204k.png">
+        <meta property="og:image:type" content="image/png">
+        <meta property="og:type" content="website">
+
     </head>
 
 <style>
