--- a/Suddomains/testing.html
+++ b/Suddomains/testing.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
-    <html prefix="og: https://ogp.me/ns#"></html>
+
+<html prefix="og: https://ogp.me/ns#">
     <head>
         <title>This is decent</title>
         <link rel="icon" href="/icon.ico">
         
         
+        <meta property="og:title" content='This is decent'>
+        <meta property="og:site_name" content="Jorgen_10's website">
+        <meta property="og:url" content="YOUR_WEBPAGE_URL">
+        <meta property="og:description" content='YOUR_WEBPAGE_DESCRIPTION'>
+        <meta property="og:image" content="YOUR_WEBPAGE_IMAGE_URL">
+        <meta property="og:image:secure_url" content="YOUR_WEBPAGE_IMAGE_URL">
+        <meta property="og:image:type" content="image/png">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://jorgen10.github.io">
-        <meta property="og:title" content="Main Hub">
-        <meta property="og:description" content="I am a 17 year old student named Jorgen_10 who likes programming. That is exactly why i made this website. This is where im going to be posting everytihng i have learnt about HTML, CSS and JavaScript!">
-        <meta property="og:image" content="https://jorgen10.github.io/Essential-images/Profile%20Picture%204k.png">
     </head>
 
     <style>
