--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="/icon.ico">
         
         
-        <meta property="og:title" content='This is decent'>
+        <meta property="og:title" content='The Hub'>
         <meta property="og:site_name" content="Jorgen_10's website">
         <meta property="og:url" content="https://jorgen10.github.io">
         <meta property="og:description" content='My name is Jorgen_10. I am a 17 year old student who likes programming. This is why i made this website. Whenever i learn more about HTML, CSS or JavaScript then im going to post it here'>
