--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@ a {
              <li>
                 <a href="Suddomains/new-page.html">Dont know what im going to do with it yet but we will see</a>
             </li>
+            <li>
+                <a href="Suddomains/yes.html">A message for Goat</a>
+            </li>
         
         </body
     </center>
