--- a/Suddomains/yes.html
+++ b/Suddomains/yes.html
@@ -10,6 +10,11 @@
             color: white;
         
         }
+
+        p {
+            color: white;
+
+        }
         
         </style>
     <body style="background-color: black;">
