--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ a {
             <li>
                 <a href="Suddomains/yes.html">A message for Goat</a>
             </li>
-        
+            <li>
+                <a href="Suddomains/monkey.html">Hall of monkeys</a>
+            </li>
         </body
     </center>
 </html>
