--- a/Suddomains/yes.html
+++ b/Suddomains/yes.html
@@ -36,6 +36,7 @@
         
         </style>
     <body style="background-color: black;">
+        <a href="/index.html">Back</a>
         <center>
             <img src="https://cdn.discordapp.com/avatars/310122545573658624/90e8af385996911921fee80643e9a240.png?size=4096">
         <p style="font-size: 20px;">I don't see why you would get me nitro if it is a waste</p>
