--- a/Suddomains/monkey.html
+++ b/Suddomains/monkey.html
@@ -33,7 +33,7 @@
         
         </style>
     
-        <body>
+        <body style="background-color: black;">
             <a href="/index.html">Back</a>
             <center>
                 <h1>Hall of Monkeys</h1><br>
