--- a/Suddomains/monkey.html
+++ b/Suddomains/monkey.html
@@ -37,7 +37,7 @@
             <a href="/index.html">Back</a>
             <center>
                 <h1>Hall of Monkeys</h1><br>
-                <img src="https://cdn.discordapp.com/avatars/660258101542256673/d3a4b22785aaad3ad197fcfacf142d25.png?size=4096">
+                <img src="https://cdn.discordapp.com/avatars/660258101542256673/d3a4b22785aaad3ad197fcfacf142d25.png?size=4096" height="1500px" width="1500px">
             </center>
 
         </body>
