--- a/lone-out-of-context/suffer.html
+++ b/lone-out-of-context/suffer.html
@@ -35,7 +35,7 @@
         }
 
     </style>
-    <body>
+    <body style="background-color: black;">
         <center>
 
             <h1>The best image</h1>
