--- a/lone-out-of-context/suffer.html
+++ b/lone-out-of-context/suffer.html
@@ -51,6 +51,11 @@
             <img src="https://media.discordapp.net/attachments/837399930569621585/837413437487054875/njn4967aktv61.png">
             <img src="https://media.discordapp.net/attachments/837399930569621585/837414125167443977/f4yf6ui8lds61.png">
             <img src="https://media.discordapp.net/attachments/837399930569621585/837414711464820766/tkve4r2mj7q61.png">
+            <img src="https://media.discordapp.net/attachments/837399930569621585/837415964089778226/Kj6OaYWXJ0.png">
+            <img src="https://media.discordapp.net/attachments/837399930569621585/837416116191494164/pynp1ycckvr61.png">
+            <img src="https://media.discordapp.net/attachments/837399930569621585/837416209808752670/nqPkEQ2deL.png">
+            <img src="https://media.discordapp.net/attachments/837399930569621585/837416393124085770/aamp5mk7b8d41.png">
+            <img src="https://media.discordapp.net/attachments/837399930569621585/837416493914128444/silkrnmqo6x21.png">
         </center>
     </body>
 </html>
