--- a/lone-out-of-context/suffer.html
+++ b/lone-out-of-context/suffer.html
@@ -73,7 +73,7 @@
             <img src="https://media.discordapp.net/attachments/837399930569621585/837420114273370142/rwpl1lpjf4u61.png">
             <img src="https://media.discordapp.net/attachments/837399930569621585/837420124822437948/891sht5bfxa41.png">
             <img src="https://media.discordapp.net/attachments/837399930569621585/837420491546558494/j4hb3uzgy8q61.png">
-            <img src="https://media.discordapp.net/attachments/837399930569621585/837420670743871558/image0.png">
+            <img src="https://media.discordapp.net/attachments/837399930569621585/837430807613276300/image0.png">
             <img src="https://media.discordapp.net/attachments/837399930569621585/837420810355736617/hinvevia6hq31.png">
             <img src="https://media.discordapp.net/attachments/837399930569621585/837421089894301737/hi3wqbmvtlq61.png">
             <img src="https://media.discordapp.net/attachments/837399930569621585/837421694959485058/0ydo599lhil21.png">
@@ -82,6 +82,8 @@
             <img src="https://media.discordapp.net/attachments/837399930569621585/837422726955139112/5y6L1bwbeW.png">
             <img src="https://media.discordapp.net/attachments/837399930569621585/837422761491562546/v2axh2ejrwu61.png">
             <img src="https://media.discordapp.net/attachments/837399930569621585/837423048952643584/60wo3fxpfrr61.png">
+            <img src="https://media.discordapp.net/attachments/837399930569621585/837423485700538398/800sb5ms28t61.png">
+            <img src=""
         </center>
     </body>
 </html>
