--- a/lone-out-of-context/suffer.html
+++ b/lone-out-of-context/suffer.html
@@ -36,6 +36,8 @@
 
     </style>
     <body style="background-color: black;">
+        
+        <a href="/index.html">Escape the pain</a>
         <center>
 
             <h1>The best images</h1>
@@ -83,7 +85,7 @@
             <img src="https://media.discordapp.net/attachments/837399930569621585/837422761491562546/v2axh2ejrwu61.png">
             <img src="https://media.discordapp.net/attachments/837399930569621585/837423048952643584/60wo3fxpfrr61.png">
             <img src="https://media.discordapp.net/attachments/837399930569621585/837423485700538398/800sb5ms28t61.png">
-            <img src=""
+            <img src="https://media.discordapp.net/attachments/837399930569621585/837431306844504134/image0.png">
         </center>
     </body>
 </html>
