--- a/Suddomains/youtube.html
+++ b/Suddomains/youtube.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <iframe width="640" height="359" src="https://www.youtube.com/embed/bIZS2Ta8D9U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </body>
+        <center>
+            <iframe width="640" height="359" src="https://www.youtube.com/embed/bIZS2Ta8D9U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </center>
+     </body>
 </html>
