--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>This is decent</title>
         <link rel="icon" href="/icon.ico">
         
-        
+        <meta name="theme-color" content="#00FF00">
         <meta property="og:title" content='The Hub'>
         <meta property="og:site_name" content="Jorgen_10's website">
         <meta property="og:url" content="https://jorgen10.github.io">
