--- a/This/is/where/Marionettes/stuff/goes/cursed.html
+++ b/This/is/where/Marionettes/stuff/goes/cursed.html
@@ -8,6 +8,6 @@
 
 
     <body style="background-color: black;">
-    <a href="/This/is/where/Marionettes/stuff/goes/normal.html">Back</a>
+    <a href="/This/is/where/Marionettes/stuff/goes/normal.html">Normal</a>
     </body>
 </html>
