--- a/This/is/where/Marionettes/stuff/goes/cursed.html
+++ b/This/is/where/Marionettes/stuff/goes/cursed.html
@@ -8,7 +8,7 @@
 
 
     <body style="background-color: black;">
-    <a href="/This/is/where/Marionettes/stuff/goes/normal.html">Normal</a>
+    <a href="/This/is/where/Marionettes/stuff/goes/normal.html">Normal</a><br>
     <img src="https://media.discordapp.net/attachments/837695663550496779/839239254911877150/20210504_154024.jpg?width=780&height=585" style="border-radius: 50%;">
     </body>
 </html>
