--- a/cosmics-furry-stuff-i-guess/furry.html
+++ b/cosmics-furry-stuff-i-guess/furry.html
@@ -2,7 +2,7 @@
 <html>
     <style>
         p{
-            color:#FFFFFF
+            color:#FFFFFF;
         }
     </style>
     <body style="background-color: black;">
