--- a/cosmics-furry-stuff-i-guess/furry.html
+++ b/cosmics-furry-stuff-i-guess/furry.html
@@ -5,7 +5,7 @@
             color:#FFFFFF;
         }
     </style>
-    <body style="background-color: black;">
+    <body>
 
         <p style="transform: rotate(45deg);">suffer</p>
 
