--- a/cosmics-furry-stuff-i-guess/furry.html
+++ b/cosmics-furry-stuff-i-guess/furry.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="/cosmics-furry-stuff-i-guess/nice.css">
     <style>
         p{
             color:#FFFFFF;
@@ -7,7 +8,7 @@
     </style>
     <body>
 
-        <p style="transform: rotate(45deg);">suffer</p>
+        <p class="bruh">suffer</p>
 
     </body>
 </html>
