--- a/cosmics-furry-stuff-i-guess/furry.html
+++ b/cosmics-furry-stuff-i-guess/furry.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="/cosmics-furry-stuff-i-guess/nice.css">
     <style>
         p{
-            color:#FFFFFF;
+            color:#000000;
         }
     </style>
     <body>
