--- a/cosmics-furry-stuff-i-guess/furry.html
+++ b/cosmics-furry-stuff-i-guess/furry.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="/cosmics-furry-stuff-i-guess/nice.css">
+    <link rel="stylesheet" type="text/css" href="/cosmics-furry-stuff-i-guess/nice.css">
     <style>
         p{
             color:#000000;
