--- a/cosmics-furry-stuff-i-guess/furry.html
+++ b/cosmics-furry-stuff-i-guess/furry.html
@@ -2,8 +2,9 @@
 <html>
     <link rel="stylesheet" type="text/css" href="/cosmics-furry-stuff-i-guess/nice.css">
     <style>
-        p{
+        .bruh{
             color:#000000;
+            
         }
     </style>
     <body>
