--- a/cosmics-furry-stuff-i-guess/furry.html
+++ b/cosmics-furry-stuff-i-guess/furry.html
@@ -2,8 +2,9 @@
 <html>
     <link rel="stylesheet" type="text/css" href="/cosmics-furry-stuff-i-guess/nice.css">
     <style>
-        .bruh{
+        bruh{
             color:#000000;
+            transform: rotate(10deg);
             
         }
     </style>
