--- a/cosmics-furry-stuff-i-guess/furry.html
+++ b/cosmics-furry-stuff-i-guess/furry.html
@@ -2,13 +2,16 @@
 <html>
     <link rel="stylesheet" type="text/css" href="/cosmics-furry-stuff-i-guess/nice.css">
     <style>
-        bruh{
-            color:#000000;
-            transform: rotate(10deg);
-            
+        .bruh{
+            color:#FFFFFF;
+            transform: rotate(30deg);
+            -o-transform: rotate(30deg);
+            width: 150px;
+            font-family: sans-serif;
+            font-size: 50px;
         }
     </style>
-    <body>
+    <body style="background-color: black;">
 
         <p class="bruh">suffer</p>
 
