--- a/cosmics-furry-stuff-i-guess/furry.html
+++ b/cosmics-furry-stuff-i-guess/furry.html
@@ -7,7 +7,7 @@
             transform: rotate(30deg);
             -o-transform: rotate(30deg);
             width: 150px;
-            font-family: sans-serif;
+            font-family: monospace;
             font-size: 50px;
         }
     </style>
