--- a/school/norwegian-ads.html
+++ b/school/norwegian-ads.html
@@ -6,6 +6,9 @@
     <body style="background-color: black;">
         <center>
             <iframe src="https://tryggheim-my.sharepoint.com/personal/jstrabo04_elev_tryggheim_no/_layouts/15/Doc.aspx?sourcedoc={49c89ca9-7b0b-4e97-81a4-50fa7d218d3e}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="1186px" height="691px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+            <div style="width:100%; height:0; position: relative; padding-bottom:56.25%">
+                <iframe src="//tv.kampanje.com/v.ihtml/player.html?source=embed&photo%5fid=66960554" style="width:100%; height:100%; position: absolute; top: 0; left: 0;" frameborder="0" border="0" scrolling="no" mozallowfullscreen="1" webkitallowfullscreen="1" allowfullscreen="1" allow="autoplay; fullscreen"></iframe>
+            </div>
         </center>
     </body>
 </html>
