--- a/school/norwegian-ads.html
+++ b/school/norwegian-ads.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <html prefix="og: https://ogp.me/ns#">
-        <title>This is decent</title>
+        <title>Norwegian presentation about ads</title>
         <link rel="icon" href="/icon.ico">
         
         
-        <meta property="og:title" content='The Hub'>
+        <meta property="og:title" content='Norwegian presentation about ads'>
         <meta property="og:site_name" content="Jorgen_10's website">
         <meta property="og:url" content="https://jorgen10.github.io">
         <meta property="og:description" content='My name is Jorgen_10. I am a 17 year old student who likes programming. This is why i made this website. Whenever i learn more about HTML, CSS or JavaScript then im going to post it here'>
