--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <html prefix="og: https://ogp.me/ns#">
         <title>This is decent</title>
         <link rel="icon" href="/icon.ico">
+        <link rel="stylesheet" href="/CSS styles/main.css"
         
         <meta name="theme-color" content="#00FF00">
         <meta property="og:title" content='The Hub'>
@@ -17,10 +18,6 @@
     </head>
 
 <style>
-@font-face{
-    src: url(fonts/Withheld.otf)
-    font-family: Withheld;
-}
 .Test{
     font-family: Withheld
 
