--- a/Suddomains/images.html
+++ b/Suddomains/images.html
@@ -6,10 +6,10 @@
         <link rel="icon" href="/icon.ico">
         
         
-        <meta property="og:title" content='The Hub'>
+        <meta property="og:title" content='Images'>
         <meta property="og:site_name" content="Jorgen_10's website">
         <meta property="og:url" content="https://jorgen10.github.io">
-        <meta property="og:description" content='My name is Jorgen_10. I am a 17 year old student who likes programming. This is why i made this website. Whenever i learn more about HTML, CSS or JavaScript then im going to post it here'>
+        <meta property="og:description" content='This is where alot of images and fanart go'>
         <meta property="og:image" content="https://jorgen10.github.io/Essential-images/Profile%20Picture%204k.png">
         <meta property="og:image:secure_url" content="https://jorgen10.github.io/Essential-images/Profile%20Picture%204k.png">
         <meta property="og:image:type" content="image/png">
