--- a/Suddomains/images.html
+++ b/Suddomains/images.html
@@ -5,7 +5,7 @@
         <title>This is decent</title>
         <link rel="icon" href="/icon.ico">
         
-        <meta name="theme-color" content="#00FF00">
+        <meta name="theme-color" content="#FF00FF">
         <meta property="og:title" content='Images'>
         <meta property="og:site_name" content="Jorgen_10's website">
         <meta property="og:url" content="https://jorgen10.github.io">
