--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@ a {
             <h1 class="Test">My projects</h1><br>
             
              <li>
-                 <a href="Suddomains/testing.html">My testing</a>
+                 <a href="subdomains/testing.html">My testing</a>
              </li>
              <li>
-                <a href="Suddomains/new-page.html">Dont know what im going to do with it yet but we will see</a>
+                <a href="Subdomains/new-page.html">Dont know what im going to do with it yet but we will see</a>
             </li>
            
         </body
