--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
         <p>Couldn't find what you are looking for.</p>
         <p>While you are here you can wait 5 seconds for a surprise or just go back now</p>
         <a href="/index.html">
-            <img style="height: 50px; width: 80px;" src="/Essential-images/Back button.png"
+            <img style="height: 50px; width: 80px; border-radius: 15%" src="/Essential-images/Back button.png"
         </a>
     </center>
 </body>
