--- a/404.html
+++ b/404.html
@@ -10,6 +10,9 @@
 <body style="background-color: black;">
     <center>
         <p style="font-family: Witheld; font-size: 150px;">404</p>
+        <video controls autoplay>
+            <source src="/Essential-images/rickroll.mp4" type="video/mp4">
+        </video>
         <p>Couldn't find what you are looking for.</p>
         <p>While you are here you can wait 5 seconds for a surprise or just go back now</p>
         <a href="/index.html">
