--- a/404.html
+++ b/404.html
@@ -9,12 +9,11 @@
 </style>
 <body style="background-color: black;">
     <center>
-        <p style="font-family: Witheld; font-size: 150px;">404</p>
         <video controls autoplay>
             <source src="/Essential-images/rickroll.mp4" type="video/mp4">
         </video>
         <p>Couldn't find what you are looking for.</p>
-        <p>While you are here you can wait 5 seconds for a surprise or just go back now</p>
+        <p>Here. Take a nice video.</p>
         <a href="/index.html">
             <img style="height: 50px; width: 80px; border-radius: 25%" src="/Essential-images/Back button.png"
         </a>
