--- a/nice.html
+++ b/nice.html
@@ -14,6 +14,6 @@
         <meta property="og:image:secure_url" content="https://jorgen10.github.io/Essential-images/Profile%20Picture%204k.png">
         <meta property="og:image:type" content="image/png">
         <meta property="og:type" content="website">
-        <meta http-equiv="Refresh" content="0; url='/index.html'">
+        <meta http-equiv="Refresh" content="0; url='/404.html'">
     </head>
 </html>
