--- a/nice.html
+++ b/nice.html
@@ -5,7 +5,7 @@
         <title>Neat</title>
         <link rel="icon" href="/icon.ico">
         
-        <meta name="theme-color" content="#FF00FF">
+        <meta name="theme-color" content="#00FF00">
         <meta property="og:title" content='Something nice'>
         <meta property="og:site_name" content="Jorgen_10's website">
         <meta property="og:url" content="https://jorgen10.github.io">
