--- a/404.html
+++ b/404.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <head>
-
+    <meta name="theme-color" content="#00FF00">
+    <meta property="og:title" content='404'>
+    <meta property="og:site_name" content="Jorgen_10's website">
+    <meta property="og:url" content="https://jorgen10.github.io">
+    <meta property="og:description" content='My very nice and convenient 404 page'>
+    <meta property="og:image" content="https://jorgen10.github.io/Essential-images/Profile%20Picture%204k.png">
+    <meta property="og:image:secure_url" content="https://jorgen10.github.io/Essential-images/Profile%20Picture%204k.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:type" content="website">
 </head>
 <style>
     p{
