--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ a {
                  <a href="subdomains/testing.html">My testing</a>
              </li>
              <li>
-                <a href="Subdomains/new-page.html">Dont know what im going to do with it yet but we will see</a>
+                <a href="subdomains/new-page.html">Dont know what im going to do with it yet but we will see</a>
             </li>
            
         </body
