--- a/404.html
+++ b/404.html
@@ -19,9 +19,7 @@
 <body style="background-color: black;">
     <center>
         <br><br><br>
-        <video controls autoplay>
-            <source src="/Essential-images/rickroll.mp4" type="video/mp4">
-        </video>
+        <iframe width="901" height="507" src="https://www.youtube.com/embed/dQw4w9WgXcQ?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; modestbranding; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>Couldn't find what you are looking for.</p>
         <p>Here. Take a nice video.</p>
         <a href="/index.html">
