--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 <body style="background-color: black;">
     <center>
         <br><br><br>
-        <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&controls=0&origin=http://jorgen10.github.io" frameborder="0"></iframe>
+        <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&controls=0&origin=http://jorgen10.github.io" frameborder="0"></iframe>
         <p>Couldn't find what you are looking for.</p>
         <p>Here. Take a nice video.</p>
         <a href="/index.html">
