--- a/404.html
+++ b/404.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<head>
+<html prefix="og: https://ogp.me/ns#">
+    <title>404</title>
+    <link rel="icon" href="/icon.ico">
     <meta name="theme-color" content="#00FF00">
     <meta property="og:title" content='404'>
     <meta property="og:site_name" content="Jorgen_10's website">
